# weldvision-trainer

./: .gitignore  ARCHITECTURE.md  README.md  weldvision-trainer.code-workspace
android-app/: .env.example  gradlew.bat  metadata.json  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/cpp/: CMakeLists.txt  apriltag_jni.cpp
android-app/app/src/main/cpp/calibration/: tcp_solver.cpp  tcp_solver.h  workpiece_frame.cpp  workpiece_frame.h
android-app/app/src/main/cpp/geometry/: geometry.h
android-app/app/src/main/cpp/jni/: calibration_bridge.cpp
android-app/app/src/main/java/com/example/: MainActivity.kt
android-app/app/src/main/java/com/example/calibration/: CalibrationJNI.kt  CalibrationProfile.kt  CalibrationWizard.kt  ProfilePersistenceStore.kt
android-app/app/src/main/java/com/example/data/: SyncLogEntity.kt  UserProfileEntity.kt  WeaveTargets.kt  WeldDao.kt  WeldDatabase.kt
android-app/app/src/main/java/com/example/tracking/: BeadPhysics.kt  CalibrationSessionManager.kt  HybridWeldTracker.kt  MqttTelemetryPublisher.kt  MultiUserPublisher.kt  WeaveAnalyzer.kt  WeldVisionJNI.kt
android-app/app/src/main/java/com/example/tracking/math/: PivotCalibrator.kt  Quaternion.kt  SensorFusionFilter.kt
android-app/app/src/main/java/com/example/ui/: AuthScreens.kt  BiometricHelper.kt  CalibrationScreen.kt  CameraPreviewView.kt  NavigationBars.kt  OnboardingOverlay.kt  WeldVisionApp.kt  WeldVisionViewModel.kt
android-app/app/src/main/java/com/weldvision/calibration/: CalibrationSyncManager.kt
android-app/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android-app/app/src/test/java/com/example/: ExampleRobolectricTest.kt  GreetingScreenshotTest.kt
android-app/app/src/test/java/com/example/tracking/math/: SensorFusionTest.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  apriltag_jni.cpp
app/src/main/java/com/example/data/: CalibrationEntity.kt  UserProfileEntity.kt  WeldDao.kt  WeldDatabase.kt  WeldRepository.kt  WeldSessionEntity.kt  WeldSyncApi.kt  WeldSyncManager.kt
app/src/main/java/com/example/tracking/: AprilTagTracker.kt  HybridWeldTracker.kt  MqttTelemetryPublisher.kt  WeldSessionManager.kt  WexelGrid.kt
app/src/main/java/com/example/ui/: AuthScreens.kt  CalibrationScreen.kt  CameraPreviewView.kt  ProfileScreen.kt  QrScannerScreen.kt  ResultsScreen.kt  SettingsScreen.kt  SimulatorScreen.kt  WeldVisionApp.kt  WeldVisionState.kt  WeldVisionViewModel.kt
app/src/main/java/com/example/ui/theme/: Color.kt
app/src/main/res/values/: strings.xml
core-assets/: README.md
core-assets/calibration/: fixture_params.json
telemetry-server/: README.md  package.json  server.ts  tsconfig.json
telemetry-server/schemas/: telemetry_message.json
weldvision-studio/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
weldvision-studio/legacy/: classroom-command-center.html.bak  manifest.json  mosquitto.conf  mqtt-client.ts.off  sw.js  telemetry-stream.ts.bak  telemetry-stream.ts.off
weldvision-studio/public/: manifest.json  replay-backup.html  sw.js
weldvision-studio/src/: App.tsx  index.css
weldvision-studio/src/components/: BrokerConnector.tsx  CalibrationGate.tsx  ClassroomDashboard.tsx  RosterSidebar.tsx  StudentCard.tsx  WeldAnalysis.tsx  WeldViewport.tsx
weldvision-studio/src/hooks/: useClassroomTelemetry.ts  useThreeRenderer.ts
weldvision-studio/src/lib/: analysis-engine.ts  hono-client.ts  mqtt-client.ts  types.ts
weldvision-studio/src/workers/: index.ts
weldvision-studio/src/workers/api/: roster.ts  sessions.ts  telemetry.ts
weldvision-studio/src/workers/db/: schema.sql
